# initiative-app-v2

./: .gitignore  Cargo.toml  README.md  styles.css
common-data-lib/: Cargo.toml
common-data-lib/src/: creatures.rs  lib.rs
src/: app.rs  components.rs  glue.rs  hooks.rs  main.rs  pages.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs
src/components/: accordion.rs  menu.rs  modal.rs
src/hooks/: conflicts_hook.rs  creatures_hook.rs  drag_and_drop_hook.rs  general_hooks.rs  sr_state.rs
src/pages/: conflicts_page.rs  encounter_page.rs  welcome_page.rs
