[package]
name = "initiative-app-v2-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common-data-lib = { path = "common-data-lib/" }
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
log = "0.4.17"
wasm-logger = "0.2.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }

[dependencies.yew_icons]
version = "0.7.2"
features = [
    "BootstrapList",
    "BootstrapDashCircle",
    "BootstrapDashCircleFill"
]

[workspace]
members = ["src-tauri", "common-data-lib"]
