[package]
name = "common-data-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
serde = { verison = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
