[package]
name = "initiative-app-v2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
common-data-lib = { path = "../common-data-lib/" }
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
toml = "0.7.3"
dirs = "5.0.1"
log = "0.4.17"
simple_logger = "4.1.0"
log4rs = "1.2.0"
chrono = "0.4.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
